Fix insufficiant bottom spacing for featured items

--- a/_sass/3-modules/_featured-section.scss
+++ b/_sass/3-modules/_featured-section.scss
@@ -67,7 +67,7 @@
     cursor: grab;
 
     @media (max-width: $mobile) {
-      margin-bottom: 0px;
+      margin-bottom: 60px;
     }
 
     .article__image {
